--- a/BattleofNeighbours1.ipynb
+++ b/BattleofNeighbours1.ipynb
@@ -12,7 +12,7 @@
    "metadata": {},
    "source": [
     "## Introduction\n",
-    "In a the city of East London, England, identify the most likely location for a new restaurant.\n",
+    "In a the city of South East London, England, identify the most likely location for a new restaurant.\n",
     "\n",
     "Choosing a location for any new restaurant is very important and, once chosen, can be expensive and time consuming to change later on.<br>\n",
     "Tips on how and where to start a new restaurant can be found on line (see example sites below), citing various factors to take into consideration when choosing the location of a new restaurant.<br>\n",
